<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.idrisadrien.tp7b2.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/textView"
        android:layout_width="168dp"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:textSize="25dp"
        android:gravity="center_vertical|center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"/>

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"/>


        <TextView
            android:id="@+id/toast_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toast_correct"
            android:textColor="#FFF"/>

        <TextView
                android:id="@+id/toast_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toast_false"
                android:textColor="#FFF"
                />

    </LinearLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:padding="20dp"
        android:text="@string/next_button"
        android:textSize="18sp"/>






</LinearLayout>
